<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.NewUserActivity">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iconImageView"
        app:layout_constraintHorizontal_bias="0.6"/>

    <ImageView
        android:id="@+id/photoUploadImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_download"
        android:scaleType="centerInside"
        android:padding="40dp"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/photoUploadImageView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="20dp"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enterFirstName"
            android:inputType="text"

            android:drawablePadding="8dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_custom_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="16dp"
            android:layout_marginTop="90dp"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextFirstName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enterLastName"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:inputType="text"
            android:background="@drawable/edit_text_custom_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateBirth"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="16dp"
            android:layout_marginTop="180dp"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/editTextDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextLastName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enterDateBirth"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_custom_background"
            android:focusable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameEmail"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="16dp"
            android:layout_marginTop="270dp"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextDateOfBirth"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enterEmail"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_custom_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmail"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/function"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/spinnerOptions"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/options"
                android:background="@drawable/edit_text_custom_background"
                style="@style/SpinnerTextStyle" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="381dp"
        android:layout_height="52dp"
        android:text="@string/register"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorSecundary"/>



</androidx.constraintlayout.widget.ConstraintLayout>
