<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/approveAccount"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeTheUsersRole"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"/>

    <Spinner
        android:id="@+id/spinnerOptionsVehicle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/options"
        android:background="@drawable/edit_text_custom_background"
        style="@style/SpinnerTextStyle"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@drawable/rounded_blue_button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginEnd="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@drawable/rounded_light_blue_button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>
