<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/select_vehicle"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/parentLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="name,emailAddress,username"
            android:hint="@string/search"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:textColor="#063B61"
            android:textColorHint="#063B61"
            android:textSize="16sp"
            android:singleLine="true"
            android:imeOptions="actionSearch"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/messagesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_error"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="14sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_results"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectionRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>

</LinearLayout>
